[package]
name = "mail-rust"
version = "0.1.0"
authors = ["guilhermeSmartins <mineg4500@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imap = "2.4.1"
native-tls = "0.2.7"
dotenv = "0.15.0"
quoted_printable = "0.4.2"
dissolve = "0.2.2"
tokio = { version = "1", features = ["full"] }
rustc-serialize = "0.3.24"
reqwest = { version = "0.11.0", features = ["blocking", "json"] }